--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,8 @@
 name=Template-Plugin-HTMLToJS
 version=0.1
+license = Perl_5
+copyright_holder = Celogeek <geistteufel@yahoo.fr>
+copyright_year = 2011
 
 [@Filter]
 bundle=@Basic
