Change author name

--- a/dist.ini
+++ b/dist.ini
@@ -1,7 +1,7 @@
 name=Template-Plugin-HTMLToJS
 version=0.1
 license = Perl_5
-copyright_holder = Celogeek <geistteufel@yahoo.fr>
+copyright_holder = celogeek <me@celogeek.com>
 copyright_year = 2011
 
 [@Filter]
@@ -32,7 +32,7 @@ critic_config=perlcriticrc
 
 [ConsistentVersionTest]
 [MinimumVersionTests]
-[CheckChangesTests]
+[CheckChangeLog]
 [UnusedVarsTests]
 
 ;Clean
