Use Dist::Zilla::PluginBundle::Author::Celogeek v0.7

--- a/dist.ini
+++ b/dist.ini
@@ -1,40 +1,6 @@
 name=Template-Plugin-HTMLToJS
-version=0.2
 license = Perl_5
 copyright_holder = celogeek <me@celogeek.com>
 copyright_year = 2011
 
-[@Filter]
-bundle=@Basic
-remove=MakeMaker
-
-;Report
-[ReportVersions]
-
-;Patch code
-[PkgVersion]
-[PodWeaver]
-[NextRelease]
-[Prepender]
-[MinimumPerl]
-[PerlTidy]
-perltidyrc=perltidyrc
-
-;Use Build
-[ModuleBuild]
-[AutoPrereqs]
-
-;Add tests
-[CompileTests]
-[PodCoverageTests]
-[CriticTests]
-critic_config=perlcriticrc
-
-[ConsistentVersionTest]
-[MinimumVersionTests]
-[CheckChangeLog]
-[UnusedVarsTests]
-
-;Clean
-[PruneFiles]
-
+[@Author::Celogeek]
