--- a/dist.ini
+++ b/dist.ini
@@ -4,3 +4,10 @@ copyright_holder = celogeek <me@celogeek.com>
 copyright_year = 2011
 
 [@Author::Celogeek]
+
+[MetaResourcesFromGit]
+homepage        = https://gitorious.celogeek.com/perl-modules/template-plugin-htmltojs
+bugtracker.web  = http://tasks.celogeek.com/projects/perl-modules-template-plugin-htmltojs
+repository.url  = git://gitorious.celogeek.com/perl-modules/template-plugin-htmltojs.git
+repository.web  = https://gitorious.celogeek.com/perl-modules/template-plugin-htmltojs
+repository.type = git
