--- a/dist.ini
+++ b/dist.ini
@@ -1,13 +1,13 @@
 name=Template-Plugin-HTMLToJS
 license = Perl_5
 copyright_holder = celogeek <me@celogeek.com>
-copyright_year = 2011
+copyright_year = 2014
 
 [@Author::Celogeek]
 
 [MetaResourcesFromGit]
-homepage        = https://gitorious.celogeek.com/perl-modules/template-plugin-htmltojs
-bugtracker.web  = http://tasks.celogeek.com/projects/perl-modules-template-plugin-htmltojs
-repository.url  = git://gitorious.celogeek.com/perl-modules/template-plugin-htmltojs.git
-repository.web  = https://gitorious.celogeek.com/perl-modules/template-plugin-htmltojs
+homepage        = https://github.com/celogeek/Template-Plugin-HTMLToJS
+bugtracker.web  = https://github.com/celogeek/Template-Plugin-HTMLToJS/issues
+repository.url  = https://github.com/celogeek/Template-Plugin-HTMLToJS
+repository.web  = https://github.com/celogeek/Template-Plugin-HTMLToJS.git
 repository.type = git
